Add Details button to character cards. Add new font. Add styling to components. Add Saving status display at Search Section

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;400&display=swap");
 a {
   text-decoration: none !important;
   color: inherit !important;
+}
+
+* {
+  font-family: "Titillium Web", sans-serif;
 }
